[www] css: rename main css file to noisebox.css

--- a/www/index.htm
+++ b/www/index.htm
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js"></script>
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/animation.css"><!--[if IE 7]><link rel="stylesheet" href="css/fontello-ie7.css"><![endif]-->
-    <link rel="stylesheet" href="css/jt-narrow.css">
+    <link rel="stylesheet" href="css/noisebox.css">
 </head>
 <body>
 <div class="container">
