--- a/www/index.htm
+++ b/www/index.htm
@@ -93,11 +93,68 @@
         self.autoscroll = ko.observable(false);
         self.data = [];
 
-        
+        self.spinner = make_loader({width: 640, height: 150, container: "#graph-current", id: "loader"});
+
+        //based on code from http://bl.ocks.org/Mattwoelk/6132258
+            function make_loader(config) {
+                return { start: function () {
+                    var radius = Math.min(config.width, config.height) / 2;
+                    var tau = 2 * Math.PI;
+
+                    var arc = d3.svg.arc()
+                            .innerRadius(radius * 0.6)
+                            .outerRadius(radius * 0.9)
+                            .startAngle(0);
+
+                    var svg = d3.select(config.container).append("svg")
+                            .attr("id", config.id)
+                            .attr("width", config.width)
+                            .attr("height", config.height)
+                            .append("g")
+                            .attr("transform", "translate(" + config.width / 2 + "," + config.height / 2 + ")");
+
+                    var background = svg.append("path")
+                            .datum({endAngle: 0.33 * tau})
+                            .style("fill", "#4D4D4D")
+                            .attr("d", arc)
+                            .call(spin, 1500);
+
+                    function spin(selection, duration) {
+                        selection.transition()
+                                .ease("linear")
+                                .duration(duration)
+                                .attrTween("transform", function () {
+                                    return d3.interpolateString("rotate(0)", "rotate(360)");
+                                });
+
+                        setTimeout(function () {
+                            spin(selection, duration);
+                        }, duration);
+                    }
+
+                    function transitionFunction(path) {
+                        path.transition()
+                                .duration(7500)
+                                .attrTween("stroke-dasharray", tweenDash)
+                                .each("end", function () {
+                                    d3.select(this).call(transition);
+                                });
+                    }
+
+                },
+                stop: function() {
+                        d3.select("#" + config.id).remove();
+                    }
+            }}
+
         self.load_data = function() {
             self.updating(true);
+            self.spinner.start();
             var jqxhr = $.getJSON("api/data", function(data) {
                 self.updating(false);
+                self.spinner.stop();
+                self.make_graph(640, 150);
+
                 if (!('data' in data)) {
                     return;
                 }
@@ -174,7 +231,6 @@
 
         self.initialize = function() {
             self.load_data();
-            self.make_graph(640, 150);
 
             if (self.sse_support()) {
 
